# Pat-Code

./: .gitignore  README.md  apply_patch.py  main.py  palin.cpp  pyproject.toml  requirements.txt  server.py  sort_stack.cpp
.ai-agent/: config.toml
.github/workflows/: ci.yml
Pat-Code/: apply_patch.py  main.py
Pat-Code/.ai-agent/: config.toml
Pat-Code/agent/: agent.py  events.py  persistence.py  session.py
Pat-Code/client/: llm_client.py
Pat-Code/config/: config.py  credentials.py
Pat-Code/context/: compaction.py
Pat-Code/prompts/: system.py
Pat-Code/tools/: base.py  registry.py  subagents.py
Pat-Code/tools/builtins/: grep.py  memory.py  read_file.py  shell.py  todo.py  web_fetch.py
Pat-Code/tools/mcp/: client.py  dataflow.md  mcp_manager.py  mcp_tool.py
Pat-Code/ui/: tui1.py
Pat-Code/vector_store/: embeddings.py  memory_manager.py
agent/: agent.py  events.py  persistence.py  session.py
client/: llm_client.py  response.py
config/: config.py  loader.py
context/: manager.py
db/: database.py
my_project/: index.html  script.js  style.css
prompts/: system.py
test/: conftest.py  schema.py  test_client_response.py  test_config.py  test_imports.py  test_tools.py  test_utils.py
tools/: base.py  discovery.py  registry.py
tools/builtins/: __init__.py  edit_file.py  glob.py  list_dir.py  read_file.py  shell.py  web_search.py  write_file.py
tools/mcp/: client.py  mcp_manager.py
ui/: tui.py
utils/: paths.py  text.py
